// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthService > should return a token when user login 1`] = `
{
  "data": {
    "token": "123.123.123",
  },
  "errors": null,
}
`;

exports[`AuthService > should return an user when user register 1`] = `
{
  "data": {
    "email": "igor@igor.me",
    "name": "Igor",
    "password": "123",
  },
  "errors": null,
}
`;
